“nado_cdelatb_cerver”

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 <head>
     <meta charset="utf-8">
     <link href="external.css" rel="stylesheet">
+    <link href="task1.php" rel="stylesheet">
+
 </head>   
 
 <body>
 <!-- work zone -->
+
+    <form method= "post"
+        action="<?php echo $_SERVER['PHP_SEFT';?>">
+        saze: <input type="int" name="saze mass">
+        max: <input type="int" name="max">
+        <input type="submit">
+    </form>
+
+</div>
 </body>
 </html>
+
+
+
+
+
